#+TITLE: Awesome Space News -- history of user-visible changes.
#+STARTUP: content hidestars

Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

* Unreleased
** Fix handling of Space API v0.12 JSON
** Add "Update" menu item

* Changes in version 0.1.0 (2015-03-09)
** Initial release

Local Variables:
mode: org
End: